[package]
name = "pulstruct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
insta = "1.34.0"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full", "extra-traits"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
